@@ -127,9 +127,9 @@ write_loader_info (const char *path, GdkPixbufFormat *info)
 	char **ext; 
 
 	g_printf("\"%s\"\n", path);
-	g_printf ("\"%s\" %u \"%s\" \"%s\"\n", 
+	g_printf ("\"%s\" %u \"%s\" \"%s\" \"%s\"\n", 
 		  info->name, info->flags, 
-		  info->domain ? info->domain : GETTEXT_PACKAGE, info->description);
+		  info->domain ? info->domain : GETTEXT_PACKAGE, info->description, info->license);
 	for (mime = info->mime_types; *mime; mime++) {
 		g_printf ("\"%s\" ", *mime);
 	}
