@@ -1,3 +1,14 @@
+2008-05-29  Matthias Clasen  <mclasen@redhat.com>
+
+	Bug 535453 - gdk_pixbuf_format_get_license returns NULL for 
+	any of the loaders
+
+	* queryloaders.c (write_loader_info): Add the license info
+	after the description.
+
+	* gdk-pixbuf-io.c (gdk_pixbuf_io_init): Read the license info
+	from the module file. Reported by Andrey Tsyvarev.
+
 2008-05-28  Michael Natterer  <mitch@imendio.com>
 
 	* gdk-pixbuf.h: define GDK_PIXBUF_H_INSIDE around including all
